# mlb_stats_api

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: schema_review.md
.github/workflows/: ci.yml
docs/: DATABASE_GUIDE.md  DATA_DICTIONARY.md  PROJECT_PLAN.md  mlb_stats_api_spec.json
src/mlb_stats/: __init__.py  cli.py
src/mlb_stats/api/: __init__.py  cache.py  client.py  endpoints.py
src/mlb_stats/collectors/: __init__.py  boxscore.py  game.py  play_by_play.py  player.py  roster.py  schedule.py  team.py  venue.py
src/mlb_stats/db/: __init__.py  connection.py  queries.py  schema.py
src/mlb_stats/models/: __init__.py  boxscore.py  game.py  pitch.py  player.py  roster.py  team.py  venue.py
src/mlb_stats/utils/: __init__.py  dates.py  logging.py  metadata.py
tests/: __init__.py  conftest.py
tests/fixtures/: .gitkeep  boxscore_745927.json  game_feed_745927.json  player_660271.json  schedule_2024-07-01.json  team_119.json  team_137.json  venue_22.json
tests/integration/: __init__.py  test_boxscore_sync.py  test_database.py  test_game_sync.py  test_play_by_play_sync.py  test_roster_sync.py  test_venue_sync.py
tests/unit/: __init__.py  test_boxscore_models.py  test_cache.py  test_cli.py  test_client.py  test_dates.py  test_game_models.py  test_metadata.py  test_pitch_models.py  test_player_models.py  test_roster_models.py  test_schema.py  test_team_models.py  test_venue_models.py
