[project]
name = "mlb-stats"
version = "1.0.0"
description = "CLI tool to collect MLB game data from the Stats API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "autoflake>=2.0.0",
    "responses>=0.23.0",
]

[project.scripts]
mlb-stats = "mlb_stats.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlb_stats"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (live API tests)",
]
